--- a/index.html
+++ b/index.html
@@ -40,25 +40,39 @@
       <div class="row section">
         <div class="col-3">
           <h5>Size</h5>
-          <div class="btn-size">UK 6</div>
+          <div class="btn-size fs-6">UK 6</div>
           <div class="btn-size mt-3">UK 7</div>
           <div class="btn-size mt-3">UK 8</div>
           <div class="btn-size mt-3">UK 9</div>
         </div>
         <div class="col">
-          <img src="img/Red Shoe.png" alt="" class="img-fluid Product" />
+          <img id="Producto" src="img/Red Shoe.png" alt="" class="img-fluid Product" />
         </div>
-        <div class="col-2">
+        <div class="col-2 colores">
           <div class="bookmark">
             <i class="fa fa-bookmark-o" aria-hidden="true"></i>
           </div>
+          <div class="color mt-3">
+            <div class="rojo">
+            </div>
+          </div>
+          <div class="color mt-3">
+            <div class="amarillo">
+            </div>
+          </div>
+          <div class="color mt-3">
+            <div class="morado">
+            </div>
+          </div>
         </div>
+
+
       </div>
       <div class="row section-1">
         <h1 class="fs-1">$30.99</h1>
         <h5 class="text-danger fs-6 ps-4">10% OFF</h5>
       </div>
-      <div class="row">
+      <div class="row section-2">
         <h6 class="text-center fw-bolder">Swipe down to add</h6>
       </div>
       <h1 class="back">NIKE</h1>
@@ -76,5 +90,6 @@
       src="https://kit.fontawesome.com/20eb9de2ea.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
